--- a/frontend/src/components/Products/IndividualProduct.css
+++ b/frontend/src/components/Products/IndividualProduct.css
@@ -1,257 +1,100 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Spartan', sans-serif;
-    overflow-wrap: break-word;
-    
-}
-.container{
-    background: #f5f5f5;
+.trial_div{
+  background-color: #f5f5f5;
 }
 
-.logo {
-    width: 80px;
-    height: 80px;
-    border-radius: 80%;
-    margin-bottom: 20px;
-    border: 10px solid #f5f5f5;
-    background: #f5f5f5;
-    display: flex;
+.app{
+  background-color:#f5f5f5;
+  max-width: 1200px;
+  width: 100%;
+  margin: 100px auto;
+  box-shadow: 0 0 5px #ccc;
+}
+.details{
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  padding: 30px 0;
+}
+.details .big-img{
+  max-width: 500px;
+  min-width: 290px;
+  overflow: hidden;
+  margin: 25px;
+}
+.big-img img{
+  width: 100%;
+  height: 100%;
+  max-height: 400px;
+  display: block;
+  object-fit: cover;
 }
 
-#header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px 80px;
-    background: #f5f5f5;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0);
-    z-index: 999;
-    position: sticky;
-    top: 0;
-    left: 0;
-    right: 0;
+.details .box{
+  max-width: 500px;
+  min-width: 290px;
+  margin: 25px;
+}
+.box .row{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 15px;
+}
+.box .row h2{
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+.para{
+  color: rgb(216, 14, 54);
+}
+.box .colors button{
+  width: 30px;
+  height: 30px;
+  border: 1px solid #333;
+  outline: none;
+  margin-right: 5px;
+  cursor: pointer;
+}
+.box p{
+  line-height: 1.5;
+  margin: 15px 0;
+}
+.thumb{
+  width: 100%;
+  height: 100px;
+  display: flex;
+  cursor: pointer;
+  margin: 10px 0;
+}
+.thumb img{
+  width: 90px;
+  height: 100%;
+  display: block;
+  object-fit: cover;
+  border: 1px solid #ddd;
+  margin-right: 5px;
+  opacity: 0.7;
+  border-radius: 5px;
+}
+.thumb img.active{
+  opacity: 1;
+  border: 1px solid lightseagreen;
+}
+.box .cart{
+  background: #333;
+  color: white;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  padding: 10px 25px;
+  margin-top: 15px;
 }
 
-#navbar {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+@media (max-width: 500px){
+  .thumb{
+    height: 50px;
+  }
+  .thumb img{
+    width: 50px;
+  }
 }
 
-#navbar li {
-    list-style: none;
-    padding: 0 20px;
-    position: relative;
-}
-
-#navbar li a {
-    text-decoration: none;
-    font-size: 16px;
-    font-weight: 600;
-    color: #1a1a1a;
-    transition: 0.3 s ease;
-}
-
-#navbar li a:hover,
-#navbar li a.active {
-    color: #088178;
-}
-
-#navbar li a.active::after,
-#navbar li a:hover::after {
-    content: "";
-    width: 30%;
-    height: 2px;
-    background: #088178;
-    position: absolute;
-    bottom: -4px;
-    left: 20px;
-}
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
-
-.timeline_image{
-  padding-top: 50px;
-  padding-left: 400px;
-}
-
-.timeline_image img{
-  width: 1000px;
-  height: 170px;
-}
-
-.flex-box {
-    display: flex;
-    width: 1000px;
-    margin: 20px auto;
-}
-
-.left {
-    width: 50%;
-}
-
-.big-img {
-    width: 250px;
-}
-
-.big-img img {
-    width: inherit;
-}
-
-.images {
-    display: flex;
-    justify-content: space-between;
-    width: 50%;
-    margin-top: 15px;
-}
-
-.small-img {
-    width: 60px;
-    overflow: hidden;
-    border: 1.5px solid black;
-}
-
-.small-img img {
-    width: inherit;
-    height: auto;
-    cursor: pointer;
-    transition: all 0.3s ease;
-}
-
-.small-img:hover img {
-    transform: scale(1.2);
-}
-
-.url {
-    font-size: 16px;
-    font-weight: 400;
-    color: rgb(0, 102, 255);
-}
-
-.pname {
-    font-size: 22px;
-    font-weight: 600;
-    margin-top: 50px;
-}
-
-.right {
-    padding-left: 140px;
-}
-
-.ratings i {
-    color: rgb(255, 136, 0);
-}
-
-.price {
-    font-size: 20px;
-    font-weight: 500;
-    margin: 20px 0;
-}
-
-.quantity {
-    display: flex;
-}
-
-.quantity p {
-    font-size: 18px;
-    font-weight: 500;
-}
-
-.quantity input {
-    width: 40px;
-    font-size: 17px;
-    font-weight: 500;
-    text-align: center;
-    margin-left: 15px;
-}
-
-.btn-box {
-    display: flex;
-    margin-top: 40px;
-}
-
-.btn-box button {
-    font-size: 18px;
-    padding: 8px 25px;
-    border: none;
-    outline: none;
-    border-radius: 6px;
-    cursor: pointer;
-    color: white;
-}
-
-.cart-btn {
-    background-color: #ff5e00;
-    margin-right: 20px;
-}
-
-.buy-btn {
-    background-color: #00aeff;
-}
-
-.cart-btn:hover {
-    background-color: #ff3c00;
-}
-
-.buy-btn:hover {
-    background-color: #0066ff;
-}
-
-.contact {
-    background: #d4d5d7;
-}
-
-.contact-info {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(160px, auto));
-    gap: 3rem;
-    padding-top: 19px;
-    padding-left: 20px;
-}
-
-.contact-info h4 {
-    color: #212529;
-    font-size: 14px;
-    text-transform: uppercase;
-    margin-bottom: 10px;
-}
-
-.contact-info p {
-    color: #565656;
-    font-size: 14px;
-    font-weight: 400;
-    text-transform: capitalize;
-    line-height: 1.5;
-    margin-bottom: 10px;
-    cursor: pointer;
-    transition: all .42s;
-}
-
-.contact-info p:hover {
-    color: #EE1C47;
-}
-
-.social-iconi {
-    color: #565656;
-    margin-right: 10px;
-    font-size: 20px;
-    transition: all .42s;
-}
-
-.social-iconi:hover {
-    transform: scale(1.3);
-}
-
-.foo-logo {
-    width: 40px;
-    height: 40px;
-    border-radius: 80%;
-    margin-bottom: 20px;
-    display: flex;
-}
-
-.foota {
-    padding-top: 110px;
-}
