--- a/aditya_frontend/stylecom.css
+++ b/aditya_frontend/stylecom.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Spartan', sans-serif;
-   
+    overflow-wrap: break-word; 
 }
 .container{
     background: #f5f5f5;
@@ -12,7 +12,22 @@
 .section-p1{
     padding: 40px 80px;
 }
-
+.logo{
+    width: 80px;
+    height: 80px;
+    border-radius: 80%;
+    margin-bottom: 20px;
+    border: 10px solid #f5f5f5;
+    background: #f5f5f5;
+    display: flex;
+}
+.foo-logo{
+        width: 40px;
+        height: 40px;
+        border-radius: 80%;
+        margin-bottom: 20px;
+        display: flex;
+}
 #header{
     display: flex;
     align-items: center;
@@ -24,7 +39,7 @@
     position: sticky;
     top: 0;
     left: 0;
-
+    right: 0;
 }
 
 #navbar{
@@ -61,7 +76,12 @@
     bottom: -4px;
     left: 20px; 
 }
-
+.pad{
+    padding-top: 100px;
+}
+.btn{
+    padding-top: 20px;
+}
 #hero{
     background-image: url("banner-3.png");
     height: 90vh;
@@ -79,6 +99,7 @@
 }
 #hero h1{
     color: #088178;
+    padding-bottom: 12px;
 }
 
 #hero button{
@@ -91,6 +112,7 @@
     padding: 12px 25px;
     transition: all .42s ease;
     padding-top: 10px;
+    cursor: pointer;
 }
 #hero button:hover{
     background-color: #000;
@@ -102,7 +124,7 @@
     padding-top: 100px;
     position: absolute;
     top: 85%;
-    right: 11%;
+    right: -0.02%;
 }
 
 .down{
@@ -132,17 +154,19 @@
 .products,.products1{
     display: flex;
     grid-template-columns: repeat(auto-fit, minimax(260px,auto));
-    gap: 2rem;
+    gap: 8.8rem;
+    padding-left: 20px;
 }
 
 .rows{
     position: relative;
     transition: all .40s;
+    padding-left: 20px;
 }
 
 .row img{
-    width: 100%;
-    height: auto;
+    width: 268.05px;
+    height: 226.375px;
     transition: all .40s;
 }
 
@@ -164,9 +188,10 @@
 }
 
 .heart-icon{
-    position: absolute;
+    position: relative;
     right: 0;
     font-size: 20px;
+    padding-left: 246px;
 }
 
 .heart-icon:hover{
@@ -195,4 +220,98 @@
         padding: 20px 3%;
         transition: .4s;
     }
+}
+
+.up-center-text{
+    text-align: center;
+    color: #111;
+    font-size: 25px;
+    text-transform: capitalize;
+    font-weight: 700;
+    margin-bottom: 30px;
+    padding-top: 20px;
+}
+.cart img{
+    width: 474.4px;
+    height: 382.25px;
+    border-radius: 5px;
+    padding-left: 20px;
+}
+.update-cart{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(380px, auto));
+    gap: 1rem;
+    padding-left: 20px;
+}
+.cart h5{
+    color: #636872;
+    font-size: 14px;
+    text-transform: capitalize;
+    font-weight: 500;
+    padding-left: 20px;
+}
+.cart h4{
+    padding-left: 20px;
+}
+.cart h5{
+    color: #111;
+    font-size: 18px;
+    text-transform: capitalize;
+    font-weight: 500;
+    padding-left: 20px;
+}
+.cart p{
+    color: #707070;
+    font-size: 15px;
+    max-width: 380px;
+    line-height: 25px;
+    margin-bottom: 12px;
+    padding-left: 20px;
+}
+.cart h6{
+    color: #151515;
+    font-size: 14px;
+    font-weight: 500;
+    padding-left: 20px;
+}
+
+.contact{
+    background-color: #d4d5d7;
+}
+
+.contact-info{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(160px,auto));
+    gap: 3rem;
+    padding-top:19px;
+    padding-left: 20px;
+}
+
+.contact-info h4{
+    color:#212529;
+    font-size: 14px;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+}
+.contact-info p{
+    color:#565656;
+    font-size: 14px;
+    font-weight: 400;
+    text-transform: capitalize;
+    line-height: 1.5;
+    margin-bottom: 10px;
+    cursor: pointer;
+    transition: all .42s;
+}
+.contact-info p:hover{
+    color: #EE1C47;
+}
+.social-iconi{
+    color: #565656;
+    margin-right: 10px;
+    font-size: 20px;
+    transition: all .42s;
+}
+.social-iconi:hover{
+    transform: scale(1.3);
 }
